feat:フォーム詳細画面の識別子をUUIDに変更

--- a/app/lib/fast_forms_web/live/question_live/index.html.heex
+++ b/app/lib/fast_forms_web/live/question_live/index.html.heex
@@ -10,7 +10,7 @@
 <.table
   id="questions"
   rows={@streams.questions}
-  row_click={fn {_id, question} -> JS.navigate(~p"/questions/#{question}") end}
+  row_click={fn {_id, question} -> JS.navigate(~p"/questions/#{question.uuid}") end}
 >
   <:col :let={{_id, question}} label="Uuid"><%= question.uuid %></:col>
   <:col :let={{_id, question}} label="Title"><%= question.title %></:col>
