--- a/app/lib/fast_forms_web/live/question_live/show.html.heex
+++ b/app/lib/fast_forms_web/live/question_live/show.html.heex
@@ -2,7 +2,7 @@
   Question <%= @question.id %>
   <:subtitle>This is a question record from your database.</:subtitle>
   <:actions>
-    <.link patch={~p"/questions/#{@question}/show/edit"} phx-click={JS.push_focus()}>
+    <.link patch={~p"/questions/#{@question.uuid}/show/edit"} phx-click={JS.push_focus()}>
       <.button>Edit question</.button>
     </.link>
   </:actions>
@@ -17,13 +17,13 @@
 
 <.back navigate={~p"/questions"}>Back to questions</.back>
 
-<.modal :if={@live_action == :edit} id="question-modal" show on_cancel={JS.patch(~p"/questions/#{@question}")}>
+<.modal :if={@live_action == :edit} id="question-modal" show on_cancel={JS.patch(~p"/questions/#{@question.uuid}")}>
   <.live_component
     module={FastFormsWeb.QuestionLive.FormComponent}
     id={@question.id}
     title={@page_title}
     action={@live_action}
     question={@question}
-    patch={~p"/questions/#{@question}"}
+    patch={~p"/questions/#{@question.uuid}"}
   />
 </.modal>
