--- a/app/lib/fast_forms_web/live/question_live/index.html.heex
+++ b/app/lib/fast_forms_web/live/question_live/index.html.heex
@@ -13,7 +13,7 @@
   row_click={fn {_id, question} -> JS.navigate(~p"/questions/#{question}") end}
 >
   <:col :let={{_id, question}} label="Title"><%= question.title %></:col>
-  <:col :let={{_id, question}} label="Type"><%= question.type %></:col>
+  <:col :let={{_id, question}} label="Type"><%= FastForms.Questions.Question.type_label(question.type) %></:col>
   <:col :let={{_id, question}} label="Deadline"><%= question.deadline %></:col>
   <:action :let={{_id, question}}>
     <div class="sr-only">
