--- a/app/lib/fast_forms_web/live/question_live/show.html.heex
+++ b/app/lib/fast_forms_web/live/question_live/show.html.heex
@@ -16,6 +16,14 @@
 
 <.back navigate={~p"/questions"}>Back to questions</.back>
 
+<.link
+  patch={~p"/questions"}
+  phx-click={JS.push("delete", value: %{id: @question.id}) |> hide("##{@question.id}")}
+  data-confirm="Are you sure?"
+>
+  <.button>Delete question</.button>
+</.link>
+
 <.modal :if={@live_action == :edit} id="question-modal" show on_cancel={JS.patch(~p"/questions/#{@question}")}>
   <.live_component
     module={FastFormsWeb.QuestionLive.FormComponent}
